Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-431

Memory leak possible in OpenWireFormat and BaseDataStreamMarshaller when connection drops during read.

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 3.4.4
    • 3.4.5, 3.5.0
    • Openwire, Transports
    • None

    Description

      During unmarshaling there is a possiblilty of leaking an object if the connection drops at a particular point reading the next incoming message. This can lead to a lot of leakage over time, especially when using the failover transport.

      Attachments

        Activity

          Fixed on trunk and in 3.4.x branch.

          tabish Timothy A. Bish added a comment - Fixed on trunk and in 3.4.x branch.

          People

            tabish Timothy A. Bish
            tabish Timothy A. Bish
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: