fix for: https://issues.apache.org/jira/browse/AMQCPP-431

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@1394090 13f79535-47bb-0310-9956-ffa450edef68